# grail

./: README.md  pyproject.toml
grail/: manage.py
grail/grail/: asgi.py  urls.py  wsgi.py
grail/servants/: models.py  urls.py  views.py
grail/servants/migrations/: 0001_initial.py
grail/servants/templates/servants/: base.html  np.html
tests/: test_grail.py
