[tool.poetry]
name = "grail"
version = "0.1.0"
description = ""
authors = ["tanah <tana@cbmperdoma.es>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
pywikibot = "^3.0.20200508"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
